classDiagram
    direction LR
    
    class Movie {
        -_movie_id: str
        -_movie_name: str
        -_movie_duration: int
        -_movie_language: MovieLanguage
        -_movie_genre: MovieGenre
        -_movie_rating: float
        +movie_id: str
        +movie_name: str
        +movie_duration: int
        +movie_language: MovieLanguage
        +movie_genre: MovieGenre
        +movie_rating: float
        +__str__(): str
    }
    
    class MovieLanguage {
        <<enumeration>>
        ENGLISH
        HINDI
        MARATHI
        TAMIL
        TELUGU
    }
    
    class MovieGenre {
        <<enumeration>>
        ACTION
        COMEDY
        DRAMA
        HORROR
        ROMANCE
        SCI_FI
    }
    
    Movie *-- MovieLanguage : has
    Movie *-- MovieGenre : has 